--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <li class="contact-item">
             <a href="tel:+38-096-111-11-11" class="address-link">
               <svg width="10" height="16">
-                 <use href="./svg/symbol-defs.svg#smartphone"></use>
+                <use href="./svg/symbol-defs.svg#smartphone"></use>
               </svg>
 
               +38 096 111 11 11</a>
-            </li>
+          </li>
         </ul>
       </div>
     </div>
@@ -119,98 +119,249 @@
 
             <p class="team-description">Ігор Дем'яненко</p>
             <h2 class="team-title">Product Designer</h2>
-            <div>
-                <svg width="20" height="20">
-                 <use href="./svg/symbol-defs.svg#instagram"></use>
-              </svg>
-              <svg width="20" height="16.25">
-                 <use href="./svg/symbol-defs.svg#twitter"></use>
-              </svg>
-              <svg width="10" height="20">
-                 <use href="./svg/symbol-defs.svg#facebook"></use>
-              </svg>
-              <svg width="20" height="20 ">
-                 <use href="./svg/symbol-defs.svg#linkedin"></use>
-              </svg>
-            </div>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20">
+                    <use href="./svg/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="16.25">
+                    <use href="./svg/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="10" height="20">
+                    <use href="./svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20 ">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270" height="260">
             <p class="team-description">Ольга Рєпіна</p>
             <h2 class="team-title">Frontend Developer</h2>
-            <div>
-                <svg width="20" height="20">
-                 <use href="./svg/symbol-defs.svg#instagram"></use>
-              </svg>
-              <svg width="20" height="16.25">
-                 <use href="./svg/symbol-defs.svg#twitter"></use>
-              </svg>
-              <svg width="10" height="20">
-                 <use href="./svg/symbol-defs.svg#facebook"></use>
-              </svg>
-              <svg width="20" height="20 ">
-                 <use href="./svg/symbol-defs.svg#linkedin"></use>
-              </svg>
-            </div>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20">
+                    <use href="./svg/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="16.25">
+                    <use href="./svg/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="10" height="20">
+                    <use href="./svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20 ">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270" height="260">
             <p class="team-description">Микола Тарасов</p>
             <h2 class="team-title">Marketing</h2>
-            <div>
-                <svg width="20" height="20">
-                 <use href="./svg/symbol-defs.svg#instagram"></use>
-              </svg>
-              <svg width="20" height="16.25">
-                 <use href="./svg/symbol-defs.svg#twitter"></use>
-              </svg>
-              <svg width="10" height="20">
-                 <use href="./svg/symbol-defs.svg#facebook"></use>
-              </svg>
-              <svg width="20" height="20 ">
-                 <use href="./svg/symbol-defs.svg#linkedin"></use>
-              </svg>
-            </div>
+            <ul class="social-list">
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20">
+                    <use href="./svg/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="16.25">
+                    <use href="./svg/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="10" height="20">
+                    <use href="./svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20 ">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
           <li class="team-item">
             <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270" height="260">
             <p class="team-description"> Михайло Єрмаков</p>
             <h2 class="team-title">UI Designer</h2>
-            <div>
-                <svg width="20" height="20">
-                 <use href="./svg/symbol-defs.svg#instagram"></use>
-              </svg>
-              <svg width="20" height="16.25">
-                 <use href="./svg/symbol-defs.svg#twitter"></use>
-              </svg>
-              <svg width="10" height="20">
-                 <use href="./svg/symbol-defs.svg#facebook"></use>
-              </svg>
-              <svg width="20" height="20 ">
-                 <use href="./svg/symbol-defs.svg#linkedin"></use>
-              </svg>
-            </div>
+            <ul class="social-list">
+
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20">
+                    <use href="./svg/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="16.25">
+                    <use href="./svg/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="10" height="20">
+                    <use href="./svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="">
+                  <svg width="20" height="20 ">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
+    </section>
+    <section class="company">
+      <h3 class="title">Постійні клієнти</h3>
+      <ul class="company-list">
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="41" height="46.7">
+              <use href="./svg/symbol-defs.svg#yaco"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="40" height="52">
+              <use href="./svg/symbol-defs.svg#tagline"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="43.46" height="41.18">
+              <use href="./svg/symbol-defs.svg#compan"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="84.44" height="40.62">
+              <use href="./svg/symbol-defs.svg#foster"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="62.54" height="45.43">
+              <use href="./svg/symbol-defs.svg#brand"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="company-item">
+          <a class="company-link" href="#">
+            <svg width="93.79" height="43.93">
+              <use href="./svg/symbol-defs.svg#taglinee"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </section>
 
   </main>
   <footer class="footer">
     <section class="footer-content">
       <div class="container">
-        <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
-        <address class="address">
-          <ul class="address-list">
-            <li class="address-item">
-              <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
-            </li>
-            <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
-          </ul>
-        </address>
+        <div class="footer-box">
+          <div class="footer-address">
+            <a href="#" class="footer-logo"><span class="footer-span">Web</span>Studio</a>
+            <address class="address">
+              <ul class="address-list">
+                <li class="address-item">
+                  <p class="address-description"> м. Київ, пр-т Лесі Українки, 26 </p>
+                </li>
+                <li class="footer-item"><a class="footer-link" href="malito:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="footer-item"><a class="footer-link" href="tel:+38-096-111-11-11">+38-096-111-11-11</a></li>
+              </ul>
+            </address>
+          </div>
+          <div class="joing">
+            <h3 class="joing-title">ПРИЄДНУЙТЕСЬ</h3>
+            <ul class="joing-list">
+              <li class="joing-item">
+                <a class="joing-link" href="#">
+                  <svg width="20" height="20">
+                    <use href="./svg/symbol-defs.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="joing-item">
+                <a class="joing-link" href="#">
+                  <svg width="20" height="16.25">
+                    <use href="./svg/symbol-defs.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="joing-item">
+                <a class="joing-link" href="#">
+                  <svg width="10" height="20">
+                    <use href="./svg/symbol-defs.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="joing-item">
+                <a class="joing-link" href="#">
+                  <svg width="20" height="20 ">
+                    <use href="./svg/symbol-defs.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
   </footer>
 </body>
+
 </html>
