--- a/index.html
+++ b/index.html
@@ -99,11 +99,17 @@
         <h2 class="wat-we-do-title">Чим ми займаємося</h2>
         <ul class="wat-we-do-list">
           <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/web-design.jpg" alt="Веб-дизайн"
-              width="370" height="294"></li>
+              width="370" height="294">
+              <h3 class="item-title">Десктопні додатки</h3>
+            </li>
           <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/development.jpg" alt="Розробка"
-              width="370" height="294"></li>
+              width="370" height="294">
+              <h3 class="item-title">Мобільні додатки</h3>
+            </li>
           <li class="wat-we-do-item"><img class="wat-we-do-img" src="./images/branding.jpg" alt="Брендинг" width="370"
-              height="294"></li>
+              height="294">
+              <h3 class="item-title">Дизайнерські рішення</h3>
+            </li>
         </ul>
       </div>
     </section>
