--- a/portfolio.html
+++ b/portfolio.html
@@ -200,6 +200,18 @@
               </li>
             </ul>
           </div>
+          <div class="form-box">
+            <h3 class="form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
+            <form class="footer-form">
+              <input name="footer-email" class="footer-input" type="email" placeholder="E-mail">
+              <button class="footer-button" type="submit">
+                Підписатися
+                <svg width="24px" height="24px">
+                  <use href="./svg/symbol-defs.svg#telegramsend"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </section>
