--- a/index.html
+++ b/index.html
@@ -432,7 +432,8 @@
     </section>
   </footer>
   <!--! Скрипт модалки -->
-  <script src="./js/modal.js"></script>
+  <script src="/Serhii-Web/js/modal.js" defer></script>
+
 </body>
 
 </html>
