--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     </section>
   </footer>
   <!--! Скрипт модалки -->
-  <script src="/Serhii-Web/js/modal.js" defer></script>
+     <script src="./js/modal.js"></script>
 
 </body>
 
