--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
     </section>
   </footer>
   <!--! Скрипт модалки -->
-     <script src="./js/modal.js"></script>
+     <script src="./Js/modal.js"></script>
 
 </body>
 
