--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <p class="modal-text">Залиште свої дані, ми вам передзвонимо</p>
               <form class="modal-form">
                 <label class="modal-label">
-                  <p>Ім'я*</p>
+                  <p class="label-title"><span class="title-span">*</span>Ім'я</p>
                   <div class="modal-input">
                     <svg width="12px" height="12px">
                       <use href="./svg/symbol-defs.svg#icon-user"></use>
@@ -76,7 +76,7 @@
                   </div>
                 </label>
                 <label class="modal-label">
-                  <P>Телефон*</P>
+                  <P class="label-title"><span class="title-span">*</span>Телефон</P>
                   <div class="modal-input">
                     <svg width="14px" height="14px">
                       <use href="./svg/symbol-defs.svg#icon-phone"></use>
@@ -85,7 +85,7 @@
                   </div>
                 </label>
                 <label class="modal-label">
-                  <p>Пошта*</p>
+                  <p class="label-title"><span class="title-span">*</span>Пошта</p>
                   <div class="modal-input">
                     <svg width="16px" height="12px">
                       <use href="./svg/symbol-defs.svg#icon-mail"></use>
