--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,11 @@
         <ul class="portfolio-list portfolio-wrap">
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <div class="card-overlay-box"><img class="portfolio-img" src="./images/technocrack.jpg" alt="Технокряк"
+              <div class="card-overlay-box">
+                <img class="portfolio-img" 
+                src="./images/technocrack.jpg" alt="Технокряк"
                   width="370" height="294">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
               </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Технокряк</p>
@@ -73,9 +76,12 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
-              <div class="card-overlay-box"><img class="portfolio-img"
+              <div class="card-overlay-box">
+                <img class="portfolio-img"
                   src="./images/new-orlean-vs-golden-star-poster.jpg" alt="Постер New Orlean vs Golden Star"
                   width="370">
+                  <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
                 <div class="portfolio-box">
                   <p class="portfolio-description">Постер New Orlean vs Golden Star</p>
                   <h3 class="portfolio-title">Дизайн</h3>
@@ -84,8 +90,11 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/seafood-restaurant.jpg" alt="Ресторан Seafood" width="370"
                 height="294">
+                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Ресторан Seafood</p>
                 <h3 class="portfolio-title">Додаток</h3>
@@ -94,7 +103,10 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/project-prime.jpg" alt="Проєкт Prime" width="370" height="294">
+              <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Проєкт Prime</p>
                 <h3 class="portfolio-title">Маркетинг</h3>
@@ -102,7 +114,10 @@
             </a>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/boxes-project.jpg" alt="Проєкт Boxes" width="370" height="294">
+              <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Проєкт Boxes</p>
                 <h3 class="portfolio-title">Додаток</h3>
@@ -111,8 +126,11 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/inspiration-has-no-borders.jpg" alt="Inspiration has no Borders"
                 width="370" height="294">
+                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Inspiration has no Borders</p>
                 <h3 class="portfolio-title">Веб-сайт</h3>
@@ -121,8 +139,11 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/edition-limited-edition.jpg" alt="Видання Limited Edition"
                 width="370" height="294">
+                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Видання Limited Edition</p>
                 <h3 class="portfolio-title">Дизайн</h3>
@@ -131,7 +152,10 @@
           </li>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/lab.jpg" alt="Проєкт LAB" width="370" height="294">
+              <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Проєкт LAB</p>
                 <h3 class="portfolio-title">Маркетинг</h3>
@@ -139,8 +163,11 @@
             </a>
           <li class="portfolio-item">
             <a class="item-link" href="#">
+              <div class="card-overlay-box">
               <img class="portfolio-img" src="./images/growing-business.jpg" alt="Growing Business" width="370"
                 height="294">
+                <p class="overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
               <div class="portfolio-box">
                 <p class="portfolio-description">Growing Business</p>
                 <h3 class="portfolio-title">Додаток</h3>
