--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <nav class="nav">
         <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
         <ul class="nav-list">
-          <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
-          <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+          <li class="nav-item s"><a href="./index.html" class="nav-link na">Студія</a></li>
+          <li class="nav-item stud"><a href="./portfolio.html" class="nav-link a">Портфоліо</a></li>
+          <li class="nav-item stud"><a href="#" class="nav-link a">Контакти</a></li>
         </ul>
       </nav>
       <!-- Обгортка для контактів -->
