--- a/portfolio.html
+++ b/portfolio.html
@@ -20,11 +20,11 @@
         <nav class="nav-p">
           <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="nav-list">
-            <li class="nav-item"><a href="./index.html" class="nav-link">Студія</a></li>
-            <li class="nav-item"><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Контакти</a></li>
+            <li class="nav-item stud"><a href="./index.html" class="nav-link a">Студія</a></li>
+            <li class="nav-item s"><a href="./portfolio.html" class="nav-link na">Портфоліо</a></li>
+            <li class="nav-item stud"><a href="#" class="nav-link a">Контакти</a></li>
           </ul>
-        </nav>
+        </nav> 
         <!-- Обгортка для контактів -->
         <div class="contacts">
           <ul class="nav-list">
