--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="sv" width="20" height="20">
                     <use href="./svg/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="16.25">
+                  <svg class="sv" width="20" height="16.25">
                     <use href="./svg/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="10" height="20">
+                  <svg class="sv" width="10" height="20">
                     <use href="./svg/symbol-defs.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20 ">
+                  <svg class="sv" width="20" height="20 ">
                     <use href="./svg/symbol-defs.svg#linkedin"></use>
                   </svg>
                 </a>
@@ -221,21 +221,21 @@
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="16.25">
+                  <svg class="sv" width="20" height="16.25">
                     <use href="./svg/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="10" height="20">
+                  <svg class="sv" width="10" height="20">
                     <use href="./svg/symbol-defs.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20 ">
+                  <svg class="sv" width="20" height="20 ">
                     <use href="./svg/symbol-defs.svg#linkedin"></use>
                   </svg>
                 </a>
@@ -249,28 +249,28 @@
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="sv" width="20" height="20">
                     <use href="./svg/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="16.25">
+                  <svg class="sv" width="20" height="16.25">
                     <use href="./svg/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="10" height="20">
+                  <svg class="sv" width="10" height="20">
                     <use href="./svg/symbol-defs.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20 ">
+                  <svg class="sv" width="20" height="20 ">
                     <use href="./svg/symbol-defs.svg#linkedin"></use>
                   </svg>
                 </a>
@@ -285,28 +285,28 @@
 
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20">
+                  <svg class="sv" width="20" height="20">
                     <use href="./svg/symbol-defs.svg#instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="16.25">
+                  <svg class="sv" width="20" height="16.25">
                     <use href="./svg/symbol-defs.svg#twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="10" height="20">
+                  <svg class="sv" width="10" height="20">
                     <use href="./svg/symbol-defs.svg#facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-item">
                 <a class="social-link" href="">
-                  <svg width="20" height="20 ">
+                  <svg class="sv" width="20" height="20 ">
                     <use href="./svg/symbol-defs.svg#linkedin"></use>
                   </svg>
                 </a>
@@ -321,42 +321,42 @@
       <ul class="company-list">
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="41" height="46.7">
+            <svg class="sv" width="41" height="46.7">
               <use href="./svg/symbol-defs.svg#yaco"></use>
             </svg>
           </a>
         </li>
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="40" height="52">
+            <svg class="sv" width="40" height="52">
               <use href="./svg/symbol-defs.svg#tagline"></use>
             </svg>
           </a>
         </li>
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="43.46" height="41.18">
+            <svg class="sv" width="43.46" height="41.18">
               <use href="./svg/symbol-defs.svg#compan"></use>
             </svg>
           </a>
         </li>
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="84.44" height="40.62">
+            <svg class="sv" width="84.44" height="40.62">
               <use href="./svg/symbol-defs.svg#foster"></use>
             </svg>
           </a>
         </li>
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="62.54" height="45.43">
+            <svg class="sv" width="62.54" height="45.43">
               <use href="./svg/symbol-defs.svg#brand"></use>
             </svg>
           </a>
         </li>
         <li class="company-item">
           <a class="company-link" href="#">
-            <svg width="93.79" height="43.93">
+            <svg class="sv" width="93.79" height="43.93">
               <use href="./svg/symbol-defs.svg#taglinee"></use>
             </svg>
           </a>
@@ -418,7 +418,7 @@
           <div class="form-box">
             <h3 class="form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h3>
             <form class="footer-form">
-              <input name="footer-email" class="footer-input" type="email" placeholder="E-mail">
+              <input name="footer-email" class="footer-input" type="email" placeholder="E-mail" required="" >
               <button class="footer-button" type="submit">
                 Підписатися
                 <svg width="24px" height="24px">
