--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
   <main class="main">
     <section class="hero">
       <div class="container flex-hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+         <div class="hero-flip" data-aos="flip-up"><h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1></div>
         <div class="modal-html">
           <button class="btn-open" data-modal-open>Замовити послугу</button>
           <div class="backdrop is-hidden" data-modal>
@@ -171,6 +172,7 @@
 
         <h2 class="team-hero-title">Наша команда</h2>
         <ul class="team-list flex">
+          <div class="flip" data-aos="flip-left">
           <li class="team-item">
             <img class="team-img" src="./images/igor-demanko.jpg" alt="Ігор Дизайнер" width="270" height="260">
 
@@ -207,6 +209,8 @@
               </li>
             </ul>
           </li>
+          </div>
+          <div class="flip" data-aos="flip-left">
           <li class="team-item">
             <img class="team-img" src="./images/olga-repina.jpg" alt="Олена Розробник" width="270" height="260">
             <p class="team-description">Ольга Рєпіна</p>
@@ -242,6 +246,8 @@
               </li>
             </ul>
           </li>
+          </div>
+          <div class="flip" data-aos="flip-left">
           <li class="team-item">
             <img class="team-img" src="./images/mikola-tarasov.jpg" alt="Микола Маркетолог" width="270" height="260">
             <p class="team-description">Микола Тарасов</p>
@@ -277,6 +283,8 @@
               </li>
             </ul>
           </li>
+          </div>
+          <div class="flip" data-aos="flip-left">
           <li class="team-item">
             <img class="team-img" src="./images/mihailo.jpg" alt="Михайло Бренд-менеджер" width="270" height="260">
             <p class="team-description"> Михайло Єрмаков</p>
@@ -313,6 +321,7 @@
               </li>
             </ul>
           </li>
+        </div>
         </ul>
       </div>
     </section>
@@ -433,6 +442,11 @@
   </footer>
   <!--! Скрипт модалки -->
      <script src="./Js/modal.js"></script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 
 </body>
 
