--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
         <ul class="nav-list">
           <li class="nav-item s"><a href="./index.html" class="nav-link na">Студія</a></li>
-          <li class="nav-item stud"><a href="./portfolio.html" class="nav-link a">Портфоліо</a></li>
-          <li class="nav-item stud"><a href="#" class="nav-link a">Контакти</a></li>
+          <li class="nav-item "><a href="./portfolio.html" class="nav-link a">Портфоліо</a></li>
+          <li class="nav-item "><a href="#" class="nav-link a">Контакти</a></li>
         </ul>
       </nav>
       <!-- Обгортка для контактів -->
