--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
         <nav class="nav-p">
           <a href="./index.html" class="header-logo"><span class="logo-span">Web</span>Studio</a>
           <ul class="nav-list">
-            <li class="nav-item stud"><a href="./index.html" class="nav-link a">Студія</a></li>
+            <li class="nav-item "><a href="./index.html" class="nav-link a">Студія</a></li>
             <li class="nav-item s"><a href="./portfolio.html" class="nav-link na">Портфоліо</a></li>
-            <li class="nav-item stud"><a href="#" class="nav-link a">Контакти</a></li>
+            <li class="nav-item "><a href="#" class="nav-link a">Контакти</a></li>
           </ul>
         </nav> 
         <!-- Обгортка для контактів -->
